Re arranged buttons and changed pop up message

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="University of Florida's first hackathon for women and nonbinary students."
+      content="University of Florida's first hackathon for women, non-binary, and gender minority students."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Wing_fav_icon.png" />
     <!--
