--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,7 +11,7 @@
 
     <meta
       name="description"
-      content="University of Florida's first hackathon for women, non-binary, and gender minority students."
+      content="University of Florida's first hackathon for women, non-binary, and gender-nonconforming students."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Wing_fav_icon.png" />
     <!--
