updated WiNGHacks banner

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -6,8 +6,8 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/Wing_fav_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:image" content="%PUBLIC_URL%/WiNGHACKS_logo.png" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/WiNGHACKS_logo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/WiNGHacks_logo.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/WiNGHacks_logo.png" />
 
     <meta
       name="description"
